# streamforge

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUTHORS.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  Cross.toml  DOCUMENTATION_STANDARDS_IMPLEMENTATION.md  Dockerfile  Dockerfile.release  Dockerfile.static  FEATURE_SUMMARY.md  GITHUB_PROTECTION_SETUP.md  GOVERNANCE.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_TUNING_RESULTS.md  PROJECT_SPEC.md  PUSH_TO_GITHUB.md  QUICK_REFERENCE_HASH_CACHE.md  README.md  RENAME_AND_OPENSOURCE_SUMMARY.md  REORGANIZATION_SUMMARY.md  ROADMAP.md  SCALING_TEST_RESULTS.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  SUPPORT.md  V1_PLAN.md  bench_results.txt  docker-compose.benchmark.yml  docker-compose.yml  json-producer.py  test-8thread-config.yaml  (+2 more)
.github/: BRANCH_PROTECTION.md  CODEOWNERS  README.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  ci.yml  docker.yml  pages.yml  performance-test.yml  pr-checks.yml  release.yml  stale.yml
benches/: end_to_end_benchmark.rs  filter_benchmarks.rs  transform_benchmarks.rs
benchmarks/: CI_PERFORMANCE_TESTING.md  OBSERVABILITY_TEST_GUIDE.md  README.md  THROUGHPUT_TESTING.md  generate_json_test_data.sh
benchmarks/configs/: at-least-once-config.yaml
benchmarks/results/: BENCHMARKS.md  DELIVERY_SEMANTICS_IMPLEMENTATION.md  METRICS_VALIDATION.md
benchmarks/results/local-20260416-174910/: criterion-filter.txt
demo/: docker-compose.yml  pipeline.yaml  produce_events.py
docs/: ADVANCED_DSL_GUIDE.md  ADVANCED_FILTERS.md  AGGREGATIONS.md  AT_LEAST_ONCE_AND_CACHE_BACKENDS.md  CHANGELOG.md  CNAME  COMPATIBILITY.md  CONFIG_SCHEMA.json  CONTRIBUTING.md  DELIVERY_GUARANTEES.md  DEPLOYMENT.md  DOCKER.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REVIEW.md  DSL_ARCHITECTURE.md  DSL_FEATURES.md  DSL_SIMPLIFICATION_INVENTORY.md  DSL_SPEC.md  DSL_V2_FUNCTION_SYNTAX.md  ENVELOPE_FEATURE_DESIGN.md  ENVELOPE_MIGRATION_GUIDE.md  ERROR_HANDLING.md  EXAMPLES.md  FUNCTION_STYLE_DSL_IMPLEMENTATION.md  HASH_AND_CACHE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  KEY_AND_HEADER_FILTERING.md  KUBERNETES.md  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  OBSERVABILITY_METRICS_DESIGN.md  OBSERVABILITY_QUICKSTART.md  OPERATIONS.md  PARSER_REFACTOR_PLAN.md  PERFORMANCE.md  PERFORMANCE_TESTING.md  PERFORMANCE_TESTING_CI.md  PHASE_3_PRAGMATIC_APPROACH.md  PROJECT_SUMMARY.md  (+14 more)
docs/archive/v1-completion/: README.md  V1_PLAN.md  V1_VERIFICATION_REPORT.md
docs/benchmarks/results/: BENCHMARK_RESULTS.md  CONCURRENT_PROCESSING_RESULTS.md  v1.0.0-baseline.md
docs/development/internal/: CI_IMPROVEMENTS.md  CRITICAL_FIXES_SUMMARY.md  DIRECTORY_CLEANUP.md  FEATURE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE_HASH_CACHE.md  README.md  REMAINING_WORK_COMPLETION.md
examples/: README.md  config.advanced.example.json  config.advanced.yaml  config.at-least-once.yaml  config.cache-backends.yaml  config.envelope-features.yaml  config.envelope-simple.yaml  config.hash-and-cache.yaml  config.multi-destination.example.json  config.security-kerberos.yaml  config.with-observability.yaml  prometheus.yml  streamforge_alerts.yml
examples/aggregation/: orders-quantiles.yaml  orders-windowed-metrics.yaml
examples/benchmarks/: README.md  filter-transform.yaml  latency-optimized.yaml  test-simplify-config.yaml  throughput-8thread.yaml
examples/configs/: config.advanced-filters.example.json  config.advanced.yaml  config.example.json  config.example.yaml  config.filter-transform.example.json  config.multidest.yaml  config.security-sasl-plain.yaml  config.security-sasl-scram.yaml  config.security-ssl.yaml  error-handling-strategies.yaml  error-policy-basic.yaml  function-style-syntax-examples.yaml  test-deprecated.yaml  test-validation.yaml  try-function-examples.yaml
examples/pipelines/: 02-filtered-routing.yaml  README.md  SECRETS.md  multi-cluster-secure-pipeline.yaml  secure-sasl-pipeline.yaml  secure-tls-pipeline.yaml  simple-mirror.yaml
examples/production/: README.md  cdc-to-datalake.yaml  cross-region-replication.yaml  multi-tenant-filtering.yaml  pii-redaction.yaml  user-filtering.yaml
examples/redpanda/: README.md  docker-compose.yml  selective-replication.yaml
helm/streamforge-operator/: Chart.yaml  README.md  values.yaml
operator/: Cargo.toml  Dockerfile  README.md
operator/src/: crd.rs  main.rs  reconciler.rs
recipes/: README.md  cache-enrichment.yaml  cross-cluster-mirror.yaml  dlq-retry.yaml  event-router.yaml  pii-masking.yaml  topic-namespace-mirror.yaml
scripts/: README.md  bench-local.sh  build-docker.sh  performance_test.sh  run-benchmarks.sh  test-yaml-config.sh  test_metrics.sh
scripts/benchmarks/: quick_start.sh  run_observability_test.sh  run_throughput_test.sh
src/: cache.rs  cache_backend.rs  compression.rs  config.rs  dlq.rs  envelope.rs  error.rs  filter.rs  filter_parser.rs  hash.rs  jsonpath.rs  lib.rs  main.rs  metrics.rs  partitioner.rs  processor.rs  processor_with_retry.rs  retry.rs  rhai_dsl.rs
src/aggregation/: engine.rs  metric.rs  mod.rs  record.rs
src/dsl/: ast.rs  dollar_syntax_tests.rs  error.rs  evaluator.rs  mod.rs  parser.rs  parser_comprehensive_tests.rs  parser_v2.rs  parser_v2_integration_tests.rs  validator.rs
src/filter/: datetime_transforms.rs  envelope_filter.rs  envelope_transform.rs  mod.rs  string_transforms.rs
src/kafka/: mod.rs  sink.rs
src/observability/: lag_monitor.rs  metrics.rs  mod.rs  server.rs
tests/: aggregation_config_validation.rs  aggregation_engine_runtime.rs  aggregation_sketches.rs  dlq.rs  security_config_test.rs
tests.disabled/: at_least_once.rs  happy_path.rs  retry.rs
tests.disabled/common/: mod.rs
ui/: .dockerignore  Dockerfile  README.md  middleware.ts  package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
ui/app/login/: page.tsx
ui/components/: PipelineLogs.tsx
ui/lib/: auth.ts
(+32 files in other folders)
