[package]
name = "streamforge"
version = "0.3.0"
edition = "2021"
authors = ["Rahul Jain <rahul.oracle.db@gmail.com>"]
description = "High-performance Kafka streaming toolkit with advanced filtering and transformation"
homepage = "https://github.com/rahulbsw/streamforge"
repository = "https://github.com/rahulbsw/streamforge"
license = "Apache-2.0"
keywords = ["kafka", "streaming", "mirror", "data-pipeline", "etl"]
categories = ["command-line-utilities", "database"]
readme = "README.md"

[dependencies]
# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi", "zstd"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Compression
flate2 = "1.0"  # gzip
snap = "1.1"     # snappy
zstd = "0.13"    # zstd

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Utilities
async-trait = "0.1"
bytes = "1.7"
regex = "1.10"  # Regular expressions

[dev-dependencies]
testcontainers = "0.23"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "streamforge"
path = "src/main.rs"

[[bench]]
name = "filter_benchmarks"
harness = false

[[bench]]
name = "transform_benchmarks"
harness = false
