[package]
name = "streamforge"
version = "1.0.0"
edition = "2021"
authors = ["Rahul Jain <rahul.oracle.db@gmail.com>"]
description = "High-performance Kafka streaming toolkit with advanced filtering and transformation"
homepage = "https://github.com/rahulbsw/streamforge"
repository = "https://github.com/rahulbsw/streamforge"
license = "Apache-2.0"
keywords = ["kafka", "streaming", "mirror", "data-pipeline", "etl"]
categories = ["command-line-utilities", "database"]
readme = "README.md"

[dependencies]
# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi", "zstd"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Compression
flate2 = "1.0"  # gzip
snap = "1.1"     # snappy
zstd = "0.13"    # zstd

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Utilities
async-trait = "0.1"
bytes = "1.7"
regex = "1.10"  # Regular expressions
rand = "0.8"    # Random number generation for jitter
chrono = "0.4"  # Date/time for timestamps
structopt = "0.3"  # CLI argument parsing

# Hashing functions
md-5 = "0.10"
sha2 = "0.10"
murmur3 = "0.5"
digest = "0.10"
hex = "0.4"

# Caching
moka = { version = "0.12", features = ["future", "sync"] }
dashmap = "6.0"  # Concurrent HashMap
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# Retry logic
tokio-retry = "0.3"

# Observability - Prometheus metrics
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

# HTTP server for metrics endpoint
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.15"
uuid = { version = "1.6", features = ["v4"] }
serial_test = "3.0"

[[bin]]
name = "streamforge"
path = "src/main.rs"

[[bin]]
name = "streamforge-validate"
path = "src/bin/validate.rs"

[[bench]]
name = "filter_benchmarks"
harness = false

[[bench]]
name = "transform_benchmarks"
harness = false

[[bench]]
name = "end_to_end_benchmark"
harness = false

[features]
default = ["hash-functions", "local-cache"]
hash-functions = []
local-cache = []
redis-cache = ["redis"]
all-caches = ["local-cache", "redis-cache"]
