[package]
name = "streamforge-operator"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Jain <rahul.oracle.db@gmail.com>"]
description = "Kubernetes Operator for managing Streamforge pipelines"
license = "Apache-2.0"

[dependencies]
# Kubernetes client
kube = { version = "0.95", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23", features = ["v1_28"] }

# Async runtime
tokio = { version = "1.50", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Schema generation
schemars = "0.8"

[[bin]]
name = "streamforge-operator"
path = "src/main.rs"
